--- a/css/header.scss
+++ b/css/header.scss
@@ -1,12 +1,11 @@
-header {
-  display: flex;
-  color: black;
-  width: 100%;
-  justify-content: space-between;
-  box-sizing: border-box;
-  padding: 1rem;
+html {
+  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
-header h1 {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  background: #f3f3f3;
 }
