--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap");
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: black;
-  width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 1rem;
+html {
+  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
-header h1 {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  background: #f3f3f3;
 }
 
 .mb-menu ul {
@@ -93,174 +87,77 @@ header h1 {
   }
 }
 
-html {
-  scroll-behavior: smooth;
-  overflow-y: scroll;
+.HomePage_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: black;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 1rem;
 }
 
-body {
-  margin: 0;
+.HomePage_header h1 {
+  text-align: center;
+}
+
+.mb-menu ul {
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  background: #f3f3f3;
-}
-
-/* Code By Webdevtrick ( https://webdevtrick.com ) */
-/* 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-a {
-  text-decoration: none;
-  color: #1da1f2;
-  transition: 0.5s ease;
-}
-a:hover {
-  color: #0080ff;
-}
-.form {
-  background: rgb(22, 19, 54, 0.9);
-  padding: 40px;
-  max-width: 600px;
-  margin: 40px auto;
-  border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-}
-.top-area {
   list-style: none;
-  padding: 0;
-  margin: 0 0 40px 0;
 }
-.top-area:after {
-  content: "";
-  display: table;
-  clear: both;
+
+.mb-menu ul li {
+  margin: 1rem;
+  padding: 1rem 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 4px 2px -2px gray;
+          box-shadow: 0 4px 2px -2px gray;
+  border-bottom: 2px solid lightgray;
 }
-.top-area li a {
-  display: block;
+
+.mb-menu li a {
   text-decoration: none;
-  padding: 15px;
-  background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
-  font-size: 20px;
-  float: left;
-  width: 50%;
-  text-align: center;
-  cursor: pointer;
-  transition: 0.5s ease;
-}
-.top-area li a:hover {
-  background: #0080ff;
-  color: #ffffff;
-}
-.top-area .active a {
-  background: #1da1f2;
-  color: #ffffff;
+  color: white;
 }
 
-.tab-content > div:last-child {
+.mb-menu {
+  background-color: black;
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  height: 0;
   display: none;
+  padding: 0;
 }
 
-h1 {
-  text-align: center;
-  font-weight: 300;
-  margin: 0 0 40px;
-}
-label {
-  position: absolute;
-  -webkit-transform: translateY(6px);
-  transform: translateY(6px);
-  left: 13px;
-  color: rgba(255, 255, 255, 0.5);
-  transition: all 0.25s ease;
-  -webkit-backface-visibility: hidden;
-  pointer-events: none;
-  font-size: 22px;
-}
-label .req {
-  margin: 2px;
-  color: #1da1f2;
-}
-label.active {
-  -webkit-transform: translateY(50px);
-  transform: translateY(50px);
-  left: 2px;
-  font-size: 14px;
-}
-label.active .req {
-  opacity: 0;
-}
-label.highlight {
-  color: #ffffff;
-}
-input,
-textarea {
-  font-size: 22px;
-  display: block;
-  width: 100%;
+.menu_active {
   height: 100%;
-  background: none;
-  background-image: none;
-  border: 1px solid #a0b3b0;
-  color: #ffffff;
-  border-radius: 0;
-  transition: border-color 0.25s ease, box-shadow 0.25s ease;
+  display: -ms-grid;
+  display: grid;
+  padding: 0.5rem 0;
 }
-input:focus,
-textarea:focus {
-  outline: 0;
-  border-color: #1da1f2;
+
+.Menu_BellIconContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-textarea {
-  border: 2px solid #a0b3b0;
-  resize: vertical;
+
+.Menu_BellIconContainer a {
+  margin: 0 0.5rem;
+  color: black;
 }
-.label-field {
-  position: relative;
-  margin-bottom: 40px;
-}
-.top-row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.top-row > div {
-  float: left;
-  width: 48%;
-  margin-right: 4%;
-}
-.top-row > div:last-child {
-  margin: 0;
-}
-.button {
-  border: 0;
-  outline: none;
-  border-radius: 0;
-  padding: 15px 0;
-  font-size: 2rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  background: #1da1f2;
-  color: #ffffff;
-  transition: all 0.5s ease;
-  -webkit-appearance: none;
-}
-.button:hover,
-.button:focus {
-  background: #0080ff;
-}
-.button-block {
-  display: block;
-  width: 100%;
-}
-.forgot {
-  margin-top: -20px;
-  text-align: right; 
-}*/
+
 .splash_screen_wrapper {
   width: 100%;
   height: 100vh;
@@ -280,5 +177,88 @@ textarea {
   width: 100px;
   height: 10px;
   border-radius: 20px;
+}
+
+.NotificationPopUp {
+  width: 100%;
+  background-color: #eee;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.Notification_id1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 1rem;
+  padding: 0.2rem 0.5rem;
+  border-left: 5px solid darkgray;
+  border-bottom: 5px solid darkgray;
+  border-top: 5px solid darkgray;
+}
+
+.NotificationPopUp div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.NotificationPopUp h3 {
+  margin: 0.5rem 0;
+  font-style: italic;
+}
+
+.NotificationPopUp button {
+  color: #050505;
+  font-style: italic;
+  background-color: white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 4px 2px -2px gray;
+          box-shadow: 0 4px 2px -2px gray;
+  padding: 0.2rem 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.NotificationPopUpContainer {
+  position: relative;
+  margin: 0 1rem;
+  padding: 1rem;
+  border: 2px solid darkgray;
+  display: none;
+}
+
+.NotificationPopUpContainer.popUPActive {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 1;
+}
+
+.triangle {
+  background-color: transparent;
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -10px;
+  right: 2rem;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid darkgray;
+}
+
+@media screen and (min-width: 600px) {
+  .NotificationPopUpContainer {
+    width: 500px;
+    position: absolute;
+    top: 15%;
+    right: 0;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
