--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,6 +118,9 @@
   padding: 1rem;
   border: 2px solid darkgray;
   display: none;
+  border-radius: 10px;
+  box-shadow: 0 0 15px black;
+
 }
 
 .NotificationPopUpContainer.popUPActive {
@@ -134,7 +137,7 @@
   right: 2rem;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid darkgray;
+  border-bottom: 10px solid white;
 }
 
 @media screen and(min-width:600px) {
