removed the scss and kept one css file only

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&family=Roboto&display=swap");
+
+/* :root {
+  declare the color varibales
+  --primary_Color: #1e90ff;
+  --secondary_Color: #1e90ff;
+  --tertiary_Color: #1e90ff;
+}
+
+This is how you use the variable in the css
+body { background-color: var(--primary_Color); } */
+
+/*#region Elements Style*/
 html {
   scroll-behavior: smooth;
   overflow-y: scroll;
@@ -9,8 +21,53 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   background: #f3f3f3;
+  font-family: "Roboto", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Fira Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+/*#endregion HomePage*/
+
+/* ************************************************************************************ */
+/* ************************************************************************************ */
+
+/*#region HomePage*/
+
+.HomePage_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: black;
+  width: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 1rem;
+}
+
+.HomePage_header h1 {
+  text-align: center;
+}
+
+/*#endregion HomePage*/
+
+/* ************************************************************************************ */
+/* ************************************************************************************ */
+
+/*#region Navigation*/
 .mb-menu ul {
   padding: 0;
   list-style: none;
@@ -20,9 +77,9 @@ body {
   margin: 1rem;
   padding: 1rem 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-box-shadow: 0 4px 2px -2px gray;
-          box-shadow: 0 4px 2px -2px gray;
+  box-shadow: 0 4px 2px -2px gray;
   border-bottom: 2px solid lightgray;
 }
 
@@ -47,6 +104,119 @@ body {
   padding: 0.5rem 0;
 }
 
+.NotificationPopUp {
+  width: 100%;
+  background-color: #eee;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.Notification_id1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  padding: 0.2rem 0.5rem;
+  border-left: 5px solid darkgray;
+  border-bottom: 5px solid darkgray;
+  border-top: 5px solid darkgray;
+}
+
+.NotificationPopUp div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.NotificationPopUp h3 {
+  margin: 0.5rem 0;
+  font-style: italic;
+}
+
+.NotificationPopUp button {
+  color: #050505;
+  font-style: italic;
+  background-color: white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 4px 2px -2px gray;
+  box-shadow: 0 4px 2px -2px gray;
+  padding: 0.2rem 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.NotificationPopUpContainer {
+  position: relative;
+  margin: 0 1rem;
+  padding: 1rem;
+  border: 2px solid darkgray;
+  display: none;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 15px black;
+  box-shadow: 0 0 15px black;
+}
+
+.NotificationPopUpContainer.popUPActive {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 1;
+}
+
+.triangle {
+  background-color: transparent;
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -10px;
+  right: 2rem;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+}
+
+.Menu_BellIconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Menu_BellIconContainer a {
+  margin: 0 0.5rem;
+  color: black;
+  border: 2px solid black;
+  padding: 0.5rem 1rem;
+}
+
+@media screen and (min-width: 600px) {
+  .NotificationPopUpContainer {
+    width: 500px;
+    position: absolute;
+    top: 15%;
+    right: 0;
+  }
+  .mb-menu {
+    width: 300px;
+    position: absolute;
+    right: 16px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
+}
+
+/*#endregion Navigation*/
+
+/* ************************************************************************************ */
+/* ************************************************************************************ */
+
+/*#region Splash Screen*/
 .ProgressBarWrapper {
   width: 100%;
   height: 100vh;
@@ -62,13 +232,13 @@ body {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   height: 10px;
   width: 100px;
   background-color: black;
   border-radius: 10px;
   -webkit-box-shadow: 0 4px 3px -3px black;
-          box-shadow: 0 4px 3px -3px black;
+  box-shadow: 0 4px 3px -3px black;
 }
 
 .progressbar {
@@ -76,7 +246,28 @@ body {
   background-color: white;
   border-radius: 10px;
   -webkit-animation: animate_progressbar 5s normal;
-          animation: animate_progressbar 5s normal;
+  animation: animate_progressbar 5s normal;
+}
+
+.splash_screen_wrapper {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.progressBar {
+  background-color: black;
+  width: 100px;
+  height: 10px;
+  border-radius: 20px;
 }
 
 @-webkit-keyframes animate_progressbar {
@@ -102,182 +293,44 @@ body {
     display: none;
   }
 }
+/*#endregion Splash Screen*/
 
-.HomePage_header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: black;
-  width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0 1rem;
-}
+/* ************************************************************************************ */
+/* ************************************************************************************ */
 
-.HomePage_header h1 {
-  text-align: center;
-}
-
-.mb-menu ul {
-  padding: 0;
-  list-style: none;
-}
-
-.mb-menu ul li {
-  margin: 1rem;
-  padding: 1rem 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-shadow: 0 4px 2px -2px gray;
-          box-shadow: 0 4px 2px -2px gray;
-  border-bottom: 2px solid lightgray;
-}
-
-.mb-menu li a {
-  text-decoration: none;
-  color: white;
-}
-
-.mb-menu {
-  background-color: black;
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-  height: 0;
-  display: none;
-  padding: 0;
-}
-
-.menu_active {
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
-  padding: 0.5rem 0;
-}
-
-.Menu_BellIconContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.Menu_BellIconContainer a {
-  margin: 0 0.5rem;
-  color: black;
-}
-
-.splash_screen_wrapper {
+/*#region Login*/
+.login_wrapper {
   width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.progressBar {
-  background-color: black;
-  width: 100px;
-  height: 10px;
-  border-radius: 20px;
+.login_wrapper form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content) [4];
+  grid-template-rows: repeat(4, -webkit-max-content);
+  grid-template-rows: repeat(4, max-content);
+  border: 2px solid darkgrey;
 }
 
-.NotificationPopUp {
-  width: 100%;
-  background-color: #eee;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.login_wrapper label {
+  margin: 0.5rem 1rem;
 }
 
-.Notification_id1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 1rem;
-  padding: 0.2rem 0.5rem;
-  border-left: 5px solid darkgray;
-  border-bottom: 5px solid darkgray;
-  border-top: 5px solid darkgray;
+.login_wrapper input {
+  margin: 0.5rem 1rem;
+  padding: 0.5rem;
 }
+/*#endregion Login*/
 
-.NotificationPopUp div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.NotificationPopUp h3 {
-  margin: 0.5rem 0;
-  font-style: italic;
-}
-
-.NotificationPopUp button {
-  color: #050505;
-  font-style: italic;
-  background-color: white;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 4px 2px -2px gray;
-          box-shadow: 0 4px 2px -2px gray;
-  padding: 0.2rem 0.5rem;
-  margin: 0.5rem 0;
-}
-
-.NotificationPopUpContainer {
-  position: relative;
-  margin: 0 1rem;
-  padding: 1rem;
-  border: 2px solid darkgray;
-  display: none;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 15px black;
-          box-shadow: 0 0 15px black;
-}
-
-.NotificationPopUpContainer.popUPActive {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  opacity: 1;
-}
-
-.triangle {
-  background-color: transparent;
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: -10px;
-  right: 2rem;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid white;
-}
-
-@media screen and (min-width: 600px) {
-  .NotificationPopUpContainer {
-    width: 500px;
-    position: absolute;
-    top: 15%;
-    right: 0;
-  }
-}
-/*# sourceMappingURL=styles.css.map */
+/* ************************************************************************************ */
+/* ************************************************************************************ */
