--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ a {
   text-decoration: none;
   color: black;
 }
-/*#endregion HomePage*/
+
+/*#endregion Elements*/
 
 /* ************************************************************************************ */
 /* ************************************************************************************ */
@@ -60,6 +61,11 @@ a {
 
 .HomePage_header h1 {
   text-align: center;
+  margin: 0.5rem;
+}
+.HomePage_header {
+  border-bottom: 2px solid white;
+  margin-bottom: 0.5rem;
 }
 
 /*#endregion HomePage*/
@@ -74,7 +80,7 @@ a {
 }
 
 .mb-menu ul li {
-  margin: 1rem;
+  margin: 0 1rem 0.5rem 1rem;
   padding: 1rem 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -87,21 +93,32 @@ a {
   text-decoration: none;
   color: white;
 }
+.mb-nav_wrapper {
+  position: relative;
+}
 
 .mb-menu {
-  background-color: black;
+  background-color: rgba(47, 47, 47, 0.9);
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  height: 0;
-  display: none;
+  height: 100%;
+  display: grid;
+  position: absolute;
   padding: 0;
+  opacity: 0;
+  border-radius: 0.5rem;
+  transition: all 0.5s ease-in-out;
+  transform: translateY(0%);
+}
+.mb-menu nav {
+  padding: 0;
+  margin: 0;
 }
 
 .menu_active {
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
   padding: 0.5rem 0;
+  opacity: 1;
+  transform: translateY(1%);
 }
 
 .NotificationPopUp {
@@ -150,23 +167,28 @@ a {
   padding: 0.2rem 0.5rem;
   margin: 0.5rem 0;
 }
+.Notification_wrapper {
+  position: relative;
+}
 
 .NotificationPopUpContainer {
-  position: relative;
+  position: absolute;
   margin: 0 1rem;
   padding: 1rem;
   border: 2px solid darkgray;
-  display: none;
+  display: flex;
+  opacity: 0;
+  top: 0;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 15px black;
   box-shadow: 0 0 15px black;
+  transition: all 0.5s ease-in-out;
+  transform: translateY(0%);
 }
 
 .NotificationPopUpContainer.popUPActive {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   opacity: 1;
+  transform: translateY(1%);
 }
 
 .triangle {
@@ -175,7 +197,7 @@ a {
   height: 0;
   position: absolute;
   top: -10px;
-  right: 2rem;
+  right: 87px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-bottom: 10px solid white;
@@ -194,6 +216,10 @@ a {
   padding: 0.5rem 1rem;
 }
 
+.dk-menu {
+  display: none;
+}
+
 @media screen and (min-width: 600px) {
   .NotificationPopUpContainer {
     width: 500px;
@@ -208,6 +234,29 @@ a {
     height: -webkit-max-content;
     height: -moz-max-content;
     height: max-content;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .Menu_BellIconContainer {
+    display: none;
+  }
+  .NotificationPopUpContainer {
+    right: 415px;
+  }
+  .dk-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .dk-menu ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+  }
+
+  .dk-menu ul li {
+    margin-left: 1rem;
   }
 }
 
@@ -408,7 +457,7 @@ a {
 /* ************************************************************************************ */
 /* ************************************************************************************ */
 
-/* #region SignUP */
+/* #region Sign Up */
 .SignUp-parent {
   height: 100vh;
   background: url("https://picsum.photos/1200/500?random=11");
