--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ img {
   max-width: 100%;
 }
 
-.about-menu {
+.about-wrapper header ul {
   list-style-type: none;
   padding:0;
 }
@@ -481,7 +481,14 @@ img {
 .about-choose-item1, .about-choose-item2, .about-choose-item3, .about-choose-item4 {
   border-radius:10px;
   margin:2rem 2rem;
-  width: max-content;
+  width: 50%;
+  display: flex;
+  flex-flow: row nowrap;
+  place-items: center;
+}
+
+.about-choose-item1 span i, .about-choose-item2 span i, .about-choose-item3 span i, .about-choose-item4 span i {
+  margin-right:1rem;
 }
 
 .about-wrapper h2 {
@@ -509,7 +516,91 @@ img {
   justify-self: center;
 }
 
+.about-footer, .about-header-logo, .about-desktop-nav {
+  display:none;
+}
 
+@media screen and (min-width: 1100px){
+
+  .about-wrapper {
+    max-width: 1400px;
+    margin:0 auto;
+  }
+  
+  .about-mobile-nav {
+    display: none;
+  }
+
+  .about-footer, .about-header-logo, .about-desktop-nav {
+    display:unset;
+  }
+
+  .about-header-logo img, .about-logo img {
+    height:50%;
+    width:70%;
+    margin:1.5rem 0;
+  }
+
+  .about-footer ul {
+    list-style-type: none;
+    padding:0;
+  }
+
+  .about-desktop-menu, .about-footer {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    place-items: center;
+  }
+
+  .about-desktop-menu {
+    align-items: center;
+  }
+
+  .about-desktop-nav ul {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+
+  .about-desktop-nav ul li {
+    padding: 1.5rem;
+  }
+
+  .desktop-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about-content2 {
+    height: 60%;
+    display: grid;
+    grid-template-columns: 1fr;
+  } 
+
+  .about-content2 p {
+    place-self: center;
+  }
+
+.about-team {
+  grid-template-columns: repeat(4, 1fr);
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  grid-gap:3rem;
+}
+
+.about-team-image1 {
+  grid-row:1/3;
+  grid-column: 1/2;
+  place-self: center;
+}
+
+.about-wrapper h2 {
+  font-size: 3rem;
+}
+
+
+
+}
 
 
 
